test/assets/invalid/signatures/superfluous-leading.hs
a :: Int -> Bool
a = True